Publish client and server packs to stores after Wings, matching GitHub channel.
Co-authored-by: Cursor <cursoragent@cursor.com>